[tool.poetry]
name = "utterexhaustedrobodoc"
version = "1.0.0"
description = "A Simple discord bot about player duels and some other stuff too"
authors = ["@retard#9070"]

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^1.4.1"
flask = "^1.1.2"
youtube-dl = "^2020.9.20"
six = "^1.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
